    - --noproxy => --no-proxy (clivescan, clivefeed)
    - --nostrict => --no-strict (clivescan)
  * Butchered --help output (all)
    - much less verbose now
    - relocated manual page data from scripts to pod files
      - clivescan.pod
      - clivefeed.pod
      - clivepass.pod
  * Removed --manual option (all)

 Developer-visible changes:
  * Makefile changes
    - target man: pod2man from the separate pod files
    - removed "man" from "all" (manpages are part of distro/repo)
    - removed "clean" target (useless)


Version 2.1.2
(February 6, 2009)

 Developer-visible changes:
  * Added a rudimentary GNU Makefile
  * Removed genman (use "make man" instead)
  * Added tests/scan/youtube-playlist.url
  - clivefeed | clivescan
  * Fixed: clive process spawning: parent process no longer waits for child,
  causing two instances of Perl interpreter running unnecessarily and wasting
  system resources


Version 2.1.1
(January 8, 2009)

 User-visible changes:
  - all
  * Changed to use ~/.config/clive-utils instead of ~/.config/clive$util$
  - clivefeed
  * Renamed CLIVEFEED_CONFIGDIR environment variable to CLIVEFEED_HOME
  - clivescan
  * Renamed CLIVESCAN_CONFIGDIR environment variable to CLIVESCAN_HOME
  - clivepass
  * Renamed CLIVEPASS_CONFIGDIR environment variable to CLIVEPASS_HOME

 Developer-visible changes:
  * Added configrc file
  * Removed configs/ subdir with contents
  * Added LICENSE file
  * Tweaked genman script
    - Be more verbose
    - Cleaned up code
  - clivepass
  * Removed Crypt::Salt module prereq.
  * Replaced prereq. module Crypt::Twofish2 with Crypt::Twofish


Version 2.1.0
(December 18, 2008)

 NOTE: Changed license GPL3 => ISC/OpenBSD.

 User-visible changes:
  * Added partial mnemonics (menus)
  * Tweaked --version output
  - clivescan
  * Fixed scanning: invalid links with garbage chars (e.g. youtube playlists)
  * Added support for liveleakcom

 Developer-visible changes: