@@ -15,6 +15,7 @@ Version 2.1.3
 
  Developer-visible changes:
   * Makefile changes
+    - additional INSTALL variables
     - target man: pod2man from the separate pod files
     - removed "man" from "all" (manpages are part of distro/repo)
     - removed "clean" target (useless)
